fix: post text overflow hidden

--- a/public/components/Post/Post.scss
+++ b/public/components/Post/Post.scss
@@ -43,6 +43,7 @@
             white-space: pre-line;
             max-width: 100%;
             overflow-wrap: break-word;
+            overflow: hidden;
         }
         &-image {
             border-radius: 10rem;
